--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,20 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo_app"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/logo_app_round"
         android:supportsRtl="true"
-        android:theme="@style/ActivityTheme"
+        android:theme="@style/splashScreenTheme"
         tools:targetApi="31">
         <activity
-            android:name=".MainLoader"
+            android:name=".LevelTest"
             android:screenOrientation="landscape"
-            android:exported="true">
+            android:exported="true" />
+        <activity
+            android:name=".MainLoader"
+            android:exported="true"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,14 +28,12 @@
         </activity>
         <activity
             android:name=".MainMenu"
-            android:screenOrientation="landscape"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="landscape">
-
-        </activity>
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
